src/main/java/com/golden/exceptions/parseErrors/MissingArgumentException.java
package com.golden.exceptions.parseErrors;

import com.golden.exceptions.ParseException;

public class MissingArgumentException extends ParseException {
    public MissingArgumentException(String what) {
        super(what);
    }
}
